log/build_2023-10-10_10-44-28/loki_teleop/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/loki/Documents/GitHub/saga_repo/install/loki_teleop/lib/python3.10/site-packages/loki_teleop/teleop_node.py", line 231
    for button in button_combo[]:
                               ^
SyntaxError: invalid syntax

